--- a/Doxygen_doc/html/class_hey_tea_object.html
+++ b/Doxygen_doc/html/class_hey_tea_object.html
@@ -99,7 +99,7 @@ Inheritance diagram for HeyTeaObject:</div>
   <map id="HeyTeaObject_map" name="HeyTeaObject_map">
 <area href="class_cup_object.html" alt="CupObject" shape="rect" coords="0,112,261,136"/>
 <area href="class_hey_tea_object_tests_1_1_mock_kichenware_object.html" alt="HeyTeaObjectTests.MockKichenwareObject" shape="rect" coords="271,112,532,136"/>
-<area href="class_pot_object.html" alt="PotObject" shape="rect" coords="542,112,803,136"/>
+<area href="class_pot_object.html" title="Adding uncooked ingredients to the Pot." alt="PotObject" shape="rect" coords="542,112,803,136"/>
   </map>
 </div></div>
 <table class="memberdecls">
