--- a/Doxygen_doc/html/class_stove_counter_1_1_on_state_changed_event_args.html
+++ b/Doxygen_doc/html/class_stove_counter_1_1_on_state_changed_event_args.html
@@ -94,6 +94,9 @@ $(function(){ initResizable(false); });
   <div class="headertitle"><div class="title">StoveCounter.OnStateChangedEventArgs Class Reference</div></div>
 </div><!--header-->
 <div class="contents">
+
+<p>Event arguments for the OnStateChanged event.  
+ <a href="#details">More...</a></p>
 <div class="dynheader">
 Inheritance diagram for StoveCounter.OnStateChangedEventArgs:</div>
 <div class="dyncontent">
@@ -107,7 +110,9 @@ Public Attributes</h2></td></tr>
 bool&#160;</td><td class="memItemRight" valign="bottom"><b>isCooking</b></td></tr>
 <tr class="separator:a4159e5479adf56d7070ab2ae8484f4fc"><td class="memSeparator" colspan="2">&#160;</td></tr>
 </table>
-<hr/>The documentation for this class was generated from the following file:<ul>
+<a name="details" id="details"></a><h2 class="groupheader">Detailed Description</h2>
+<div class="textblock"><p>Event arguments for the OnStateChanged event. </p>
+</div><hr/>The documentation for this class was generated from the following file:<ul>
 <li>D:/Software/GitHub/CG_Practical_gby/HeyTea!/Assets/Scripts/Counters/<b>StoveCounter.cs</b></li>
 </ul>
 </div><!-- contents -->
