--- a/Doxygen_doc/html/doxygen_crawl.html
+++ b/Doxygen_doc/html/doxygen_crawl.html
@@ -32,6 +32,8 @@
 <a href="class_cup_obejct_visual-members.html"/>
 <a href="class_cup_object.html"/>
 <a href="class_cup_object-members.html"/>
+<a href="class_cup_object_editor_tests.html"/>
+<a href="class_cup_object_editor_tests-members.html"/>
 <a href="class_cutting_counter.html"/>
 <a href="class_cutting_counter-members.html"/>
 <a href="class_cutting_counter_visual.html"/>
@@ -82,12 +84,6 @@
 <a href="interface_player_input_actions_1_1_i_player_actions-members.html"/>
 <a href="struct_player_input_actions_1_1_player_actions.html"/>
 <a href="struct_player_input_actions_1_1_player_actions-members.html"/>
-<a href="class_pot_counter.html"/>
-<a href="class_pot_counter-members.html"/>
-<a href="class_pot_counter_1_1_on_state_changed_event_args.html"/>
-<a href="class_pot_counter_1_1_on_state_changed_event_args-members.html"/>
-<a href="class_pot_counter_visual.html"/>
-<a href="class_pot_counter_visual-members.html"/>
 <a href="class_pot_object.html"/>
 <a href="class_pot_object-members.html"/>
 <a href="class_pot_object_editor_tests.html"/>
@@ -128,12 +124,40 @@
 <a href="classes.html"/>
 <a href="hierarchy.html"/>
 <a href="functions.html"/>
+<a href="functions.html"/>
+<a href="functions.html"/>
+<a href="functions.html"/>
+<a href="functions.html"/>
+<a href="functions.html"/>
+<a href="functions.html"/>
+<a href="functions.html"/>
+<a href="functions.html"/>
+<a href="functions.html"/>
+<a href="functions.html"/>
+<a href="functions_func.html"/>
+<a href="functions_func.html"/>
+<a href="functions_func.html"/>
+<a href="functions_func.html"/>
+<a href="functions_func.html"/>
+<a href="functions_func.html"/>
+<a href="functions_func.html"/>
+<a href="functions_func.html"/>
+<a href="functions_func.html"/>
+<a href="functions_func.html"/>
 <a href="functions_enum.html"/>
+<a href="functions_evnt.html"/>
 <a href="annotated.html"/>
 <a href="class_base_counter.html"/>
 <a href="class_base_counter_editor_tests.html"/>
 <a href="class_clear_counter.html"/>
+<a href="class_clear_counter.html#af783a4a0c0b8b41478c117e6358a804a"/>
 <a href="class_clear_counter_editor_tests.html"/>
+<a href="class_clear_counter_editor_tests.html#a044bc32bd66ab6fa77d2d68e66078b43"/>
+<a href="class_clear_counter_editor_tests.html#a2bda3b4854b53ecb3d100489305b0f85"/>
+<a href="class_clear_counter_editor_tests.html#a94656efbd171b7cae626a08407b7bd6b"/>
+<a href="class_clear_counter_editor_tests.html#a9f0f17bc1ba47d69fe5dc9eb44c7a139"/>
+<a href="class_clear_counter_editor_tests.html#ac6d722d883073074cc547be0dd9202b3"/>
+<a href="class_clear_counter_editor_tests.html#adda2bb0f02d47a1d445293e7d7931310"/>
 <a href="class_container_counter.html"/>
 <a href="class_container_counter_tests.html"/>
 <a href="class_cooking_recipe_s_o.html"/>
@@ -142,6 +166,7 @@
 <a href="class_cup_icon_u_i.html"/>
 <a href="class_cup_obejct_visual.html"/>
 <a href="class_cup_object.html"/>
+<a href="class_cup_object_editor_tests.html"/>
 <a href="class_cutting_counter.html"/>
 <a href="class_cutting_counter_visual.html"/>
 <a href="class_cutting_recipe_s_o.html"/>
@@ -159,11 +184,23 @@
 <a href="class_player_1_1_on_selected_counter_changed_events_args.html"/>
 <a href="class_player_animator.html"/>
 <a href="class_player_input_actions.html"/>
-<a href="class_pot_counter.html"/>
-<a href="class_pot_counter_1_1_on_state_changed_event_args.html"/>
-<a href="class_pot_counter_visual.html"/>
 <a href="class_pot_object.html"/>
+<a href="class_pot_object.html#a02063ee4c0de03f82c62cf05776765b1"/>
+<a href="class_pot_object.html#a1c3b06f0ecd3bb0087e9e5e1c85313f2"/>
+<a href="class_pot_object.html#a2c3516a3d94f51cb806b96e86694d53b"/>
+<a href="class_pot_object.html#a650de76f5feeaf671509b59febaad149"/>
+<a href="class_pot_object.html#a69643d6ce629f6774a97dc0f5f1de791"/>
+<a href="class_pot_object.html#a84251e9ad722cf285c24d6a96e6416b1"/>
+<a href="class_pot_object.html#a90726fb164e59867a633f05ab90175b4"/>
+<a href="class_pot_object.html#ab8c18c251ecfcfde5f37d5ee35a93953"/>
+<a href="class_pot_object.html#adb7ad6f35e0996e8bec0a1a9c04c57da"/>
 <a href="class_pot_object_editor_tests.html"/>
+<a href="class_pot_object_editor_tests.html#a133a0e7614171ea009842f42443ce016"/>
+<a href="class_pot_object_editor_tests.html#a2f49d4273b6899e92c36e6a096f6eddf"/>
+<a href="class_pot_object_editor_tests.html#a7c5582fe7a9ca56611b03605c1410a8a"/>
+<a href="class_pot_object_editor_tests.html#aa67ae33f9a7768bfb514dddb80c36231"/>
+<a href="class_pot_object_editor_tests.html#aa805d9d24e905264817170ac4492c6e5"/>
+<a href="class_pot_object_editor_tests.html#ab1058d12739a16fb9144a487d8f7e83c"/>
 <a href="class_progress_bar_u_i.html"/>
 <a href="class_selected_counter_visual.html"/>
 <a href="class_selected_counter_visual_editor_tests.html"/>
@@ -171,14 +208,32 @@
 <a href="class_soup_container_counter_tests.html"/>
 <a href="class_soup_container_counter_visual.html"/>
 <a href="class_stove_counter.html"/>
+<a href="class_stove_counter.html#a26d7a3b8b304d44d2f4f0739fd8ad147"/>
+<a href="class_stove_counter.html#a8523bbd4ab00c082572e88b9b14e263c"/>
+<a href="class_stove_counter.html#af67228be9e9e60bf54921a5ddb1531c9"/>
+<a href="class_stove_counter.html#af741c4dbf60e05ec81249bddeb1ede4f"/>
 <a href="class_stove_counter_1_1_on_state_changed_event_args.html"/>
 <a href="class_stove_counter_editor_tests.html"/>
+<a href="class_stove_counter_editor_tests.html#a140d95e4614251be31288fa24aa7270d"/>
+<a href="class_stove_counter_editor_tests.html#a1dcf6d74b5229839a1f173d24ae46ffe"/>
+<a href="class_stove_counter_editor_tests.html#a27d71b3c1bedfc67a9915ce294eae3bc"/>
+<a href="class_stove_counter_editor_tests.html#a3d463574b2a673cd57887de65d29c207"/>
+<a href="class_stove_counter_editor_tests.html#a54e5e6bf042b03648cf9861b612a4697"/>
+<a href="class_stove_counter_editor_tests.html#a6c4d78974782ff8d5381c20a543ba771"/>
+<a href="class_stove_counter_editor_tests.html#a7c6c3ce56ce8698ebd67c03bb9800aad"/>
+<a href="class_stove_counter_editor_tests.html#a887242569adc370dfd1fdc1973f715db"/>
+<a href="class_stove_counter_editor_tests.html#aa04c3ac04e24691b8e8ffdd5ae4dd152"/>
+<a href="class_stove_counter_editor_tests.html#aca043516c4e0e940b43651221544333a"/>
+<a href="class_stove_counter_editor_tests.html#ad8f3df5c4d0cd4cc91792d56e62ce89d"/>
+<a href="class_stove_counter_editor_tests.html#add65ad536fe9fc2f3e21474e2bf7ccd0"/>
 <a href="class_stove_counter_visual.html"/>
 <a href="class_trash_counter.html"/>
 <a href="class_visual_active.html"/>
 <a href="classes.html"/>
 <a href="functions.html"/>
 <a href="functions_enum.html"/>
+<a href="functions_evnt.html"/>
+<a href="functions_func.html"/>
 <a href="hierarchy.html"/>
 <a href="interface_i_has_progress.html"/>
 <a href="interface_i_hey_tea_object_parents.html"/>
