--- a/Doxygen_doc/html/interface_i_hey_tea_object_parents.html
+++ b/Doxygen_doc/html/interface_i_hey_tea_object_parents.html
@@ -96,16 +96,15 @@ Inheritance diagram for IHeyTeaObjectParents:</div>
  <div class="center">
   <img src="interface_i_hey_tea_object_parents.png" usemap="#IHeyTeaObjectParents_map" alt=""/>
   <map id="IHeyTeaObjectParents_map" name="IHeyTeaObjectParents_map">
-<area href="class_base_counter.html" alt="BaseCounter" shape="rect" coords="855,56,1130,80"/>
-<area href="class_hey_tea_object_tests_1_1_mock_hey_tea_object_parent.html" alt="HeyTeaObjectTests.MockHeyTeaObjectParent" shape="rect" coords="1140,56,1415,80"/>
-<area href="class_player.html" alt="Player" shape="rect" coords="1425,56,1700,80"/>
-<area href="class_clear_counter.html" alt="ClearCounter" shape="rect" coords="0,112,275,136"/>
+<area href="class_base_counter.html" alt="BaseCounter" shape="rect" coords="712,56,987,80"/>
+<area href="class_hey_tea_object_tests_1_1_mock_hey_tea_object_parent.html" alt="HeyTeaObjectTests.MockHeyTeaObjectParent" shape="rect" coords="997,56,1272,80"/>
+<area href="class_player.html" alt="Player" shape="rect" coords="1282,56,1557,80"/>
+<area href="class_clear_counter.html" title="Handle interaction between ClearCounter and Player." alt="ClearCounter" shape="rect" coords="0,112,275,136"/>
 <area href="class_container_counter.html" alt="ContainerCounter" shape="rect" coords="285,112,560,136"/>
 <area href="class_cutting_counter.html" alt="CuttingCounter" shape="rect" coords="570,112,845,136"/>
-<area href="class_pot_counter.html" alt="PotCounter" shape="rect" coords="855,112,1130,136"/>
-<area href="class_soup_container_counter.html" alt="SoupContainerCounter" shape="rect" coords="1140,112,1415,136"/>
-<area href="class_stove_counter.html" alt="StoveCounter" shape="rect" coords="1425,112,1700,136"/>
-<area href="class_trash_counter.html" alt="TrashCounter" shape="rect" coords="1710,112,1985,136"/>
+<area href="class_soup_container_counter.html" alt="SoupContainerCounter" shape="rect" coords="855,112,1130,136"/>
+<area href="class_stove_counter.html" title="The StoveCounter class is responsible for handling interactions with the stove, including cooking pro..." alt="StoveCounter" shape="rect" coords="1140,112,1415,136"/>
+<area href="class_trash_counter.html" alt="TrashCounter" shape="rect" coords="1425,112,1700,136"/>
   </map>
 </div></div>
 <table class="memberdecls">
