--- a/Doxygen_doc/html/interface_i_has_progress.html
+++ b/Doxygen_doc/html/interface_i_has_progress.html
@@ -98,8 +98,7 @@ Inheritance diagram for IHasProgress:</div>
   <img src="interface_i_has_progress.png" usemap="#IHasProgress_map" alt=""/>
   <map id="IHasProgress_map" name="IHasProgress_map">
 <area href="class_cutting_counter.html" alt="CuttingCounter" shape="rect" coords="0,56,96,80"/>
-<area href="class_pot_counter.html" alt="PotCounter" shape="rect" coords="106,56,202,80"/>
-<area href="class_stove_counter.html" alt="StoveCounter" shape="rect" coords="212,56,308,80"/>
+<area href="class_stove_counter.html" title="The StoveCounter class is responsible for handling interactions with the stove, including cooking pro..." alt="StoveCounter" shape="rect" coords="106,56,202,80"/>
   </map>
 </div></div>
 <table class="memberdecls">
